Fix a few bugs in the tabview
- Fixed the pop-tab controls not showing.
- Fixed the pop-tab click propagating to the directory queuer.

--- a/src/assets/public/css/browser.css
+++ b/src/assets/public/css/browser.css
@@ -98,6 +98,10 @@
 		display: none !important;
 	}
 
+	.browser-view > .tab-view > .tab:not(:nth-last-child(3)) .do-pop-tab {
+		display: none !important;
+	}
+
 }
 
 .browser-player {
